[gd_scene load_steps=16 format=2]

[ext_resource path="res://ASSETS/fonts/amstrad_cpc464.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ASSETS/fonts/PressStart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ASSETS/sounds/mus_worldmap.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/menu/Difficulty.gd" type="Script" id=4]
[ext_resource path="res://scripts/menu/Settings.gd" type="Script" id=5]
[ext_resource path="res://scripts/menu/LevelName.gd" type="Script" id=6]
[ext_resource path="res://scripts/menu/ReturnMenu.gd" type="Script" id=7]
[ext_resource path="res://scripts/menu/VolumeBar.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.353546
margin_right = 1280.35
margin_bottom = 720.0
color = Color( 0.083313, 0.410156, 0.083313, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0470588, 0.772549, 0.0470588, 1 )
text = "SETTINGS_BIGTITLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 192.0
margin_right = 684.0
margin_bottom = 230.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_DIFFICULTY"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" type="Button" parent="DifficultyLabel"]
margin_left = 480.0
margin_right = 1164.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = true
text = "SETTINGS_VALUE_NORMAL"
flat = true
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 256.0
margin_right = 716.0
margin_bottom = 294.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_MULTIPLAYER"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="Button" parent="MultiplayerLabel"]
margin_left = 480.0
margin_right = 1068.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 684.0
margin_bottom = 358.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_FULLSCREEN"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenButton" type="Button" parent="FullscreenLabel"]
margin_left = 480.0
margin_right = 1068.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFPSLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 384.0
margin_right = 588.0
margin_bottom = 422.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_SHOWFPS"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowFPSButton" type="Button" parent="ShowFPSLabel"]
margin_left = 480.0
margin_right = 1068.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
toggle_mode = true
text = "SETTINGS_VALUE_OFF"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RumbleLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 556.0
margin_bottom = 486.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_RUMBLE"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RumbleButton" type="Button" parent="RumbleLabel"]
margin_left = 480.0
margin_right = 1036.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
toggle_mode = true
pressed = true
text = "SETTINGS_VALUE_ON"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Button" parent="."]
margin_left = 64.0
margin_top = 512.0
margin_right = 268.0
margin_bottom = 550.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
text = "SETTINGS_VOLUME"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeBar" type="HSlider" parent="VolumeLabel"]
margin_left = 488.0
margin_top = 12.0
margin_right = 741.0
margin_bottom = 28.0
max_value = 4.0
step = 0.1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingInfo" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 6 )
text = "##########"
align = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMenu" type="Button" parent="."]
margin_right = 108.0
margin_bottom = 30.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
shortcut_in_tooltip = false
text = "SETTINGS_RETURN"
flat = true
align = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="mouse_entered" from="DifficultyLabel" to="SettingInfo" method="_on_DifficultyButton_mouse_entered"]
[connection signal="mouse_exited" from="DifficultyLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="DifficultyLabel/DifficultyButton" to="DifficultyLabel/DifficultyButton" method="_on_Difficulty_toggled"]
[connection signal="mouse_entered" from="MultiplayerLabel" to="SettingInfo" method="_on_MultiplayerLabel_mouse_entered"]
[connection signal="mouse_exited" from="MultiplayerLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="MultiplayerLabel/MultiplayerButton" to="." method="_on_MultiplayerButton_toggled"]
[connection signal="mouse_entered" from="FullscreenLabel" to="SettingInfo" method="_on_FullscreenButton_mouse_entered"]
[connection signal="mouse_exited" from="FullscreenLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="FullscreenLabel/FullscreenButton" to="." method="_on_FullscreenButton2_toggled"]
[connection signal="mouse_entered" from="ShowFPSLabel" to="SettingInfo" method="_on_ShowFPSButton_mouse_entered"]
[connection signal="mouse_exited" from="ShowFPSLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="ShowFPSLabel/ShowFPSButton" to="." method="_on_ShowFPSButton_toggled"]
[connection signal="mouse_entered" from="RumbleLabel" to="SettingInfo" method="_on_RumbleLabel_mouse_entered"]
[connection signal="mouse_exited" from="RumbleLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="toggled" from="RumbleLabel/RumbleButton" to="." method="_on_RumbleButton_toggled"]
[connection signal="mouse_entered" from="VolumeLabel" to="SettingInfo" method="_on_VolumeLabel_mouse_entered"]
[connection signal="mouse_exited" from="VolumeLabel" to="SettingInfo" method="_on_LevelButton_mouse_exited"]
[connection signal="value_changed" from="VolumeLabel/VolumeBar" to="VolumeLabel/VolumeBar" method="_on_value_changed"]
[connection signal="pressed" from="ReturnToMenu" to="ReturnToMenu" method="_on_ReturnToMenu_pressed"]
